이메일 단건 발송 시 가상 스레드 적용 (#164)
* chore: 프리뷰 옵션 추가

* chore: 이메일 발송 기능 가상 스레드 적용

* test: 이메일 단건 발송 가상 스레드 관련 테스트 코드 작성

* feat: 이메일 발송 시 이벤트 처리

* feat: 이메일 발송 기능에 가상 스레드 적용

* test: 기존 이메일 발송 테스트 코드 이벤트 처리 방식으로 수정

* style: 불필요한 공백 제거